--- a/config/database.yml
+++ b/config/database.yml
@@ -1,51 +1,43 @@
-# MySQL.Versions 4.1 and 5.0 are recommended.
-# 
-# Install the MYSQL driver
-# gem install mysql2
-#
-# Ensure the MySQL gem is defined in your Gemfile
-# gem 'mysql2'
-#
-# And be sure to use new-style password hashing:
-# http://dev.mysql.com/doc/refman/5.0/en/old-client.html
+development:
+  adapter: postgresql
+  encoding: unicode
+  database: sample_postgres_development
+  pool: 5
+  username: deploy
+  password: 9fidus99
+  host: localhost
+  # Connect on a TCP socket. Omitted by default since the client uses a
+  # domain socket that doesn't need configuration. Windows does not have
+  # domain sockets, so uncomment these lines.
+  #host: localhost
+  #port: 5432
 
+  # Schema search path. The server defaults to $user,public
+  #schema_search_path: myapp,sharedapp,public
+
+  # Minimum log levels, in increasing order:
+  #   debug5, debug4, debug3, debug2, debug1,
+  #   log, notice, warning, error, fatal, and panic
+  # The server defaults to notice.
+  #min_messages: warning
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
-
-development:
-  adapter: mysql2
-  encoding: utf8
-  reconnect: false
-  database: geofly_development
+test:
+  adapter: postgresql
+  encoding: unicode
+  database: sample_postgres_test
   pool: 5
-  username: david
+  username: deploy
   password: 9fidus99
   host: localhost
-  socket: /var/run/mysqld/mysqld.sock
-
-
-
-  test:
-  adapter: mysql2
-  encoding: utf8
-  reconnect: false
-  database: geofly_test
-  pool: 5
-  username: david
-  password: 9fidus99
-  socket: /var/run/mysqld/mysqld.sock
-
 
 production:
-  adapter: mysql2
-  encoding: utf8
-  reconnect: false
-  database: geofly_production
+  adapter: postgresql
+  encoding: unicode
+  database: sample_postgres_production
   pool: 5
-  username: david
+  username: deploy
   password: 9fidus99
   host: localhost
-  socket: /var/run/mysqld/mysqld.sock
-
